cloudcomputing/CloudAssignmentTracker/terraform/vpc.tf

# Creates the private AWS network for our application
resource "aws_vpc" "main" {
  cidr_block = "10.0.0.0/16"

  tags = {
    Name = "cloud-assignment-vpc"
  }
}
